# esscc-books

./: .gitignore  Dockerfile  pyproject.toml  readme.md  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci_cd.yaml
books/: __init__.py
server/: __init__.py  database.py  root_controller.py
server/api/: book_controller.py  home_controller.py
server/api/books/: controller.py  models.py  repository.py  service.py
server/static/: index.css
server/templates/: index.html
tests/: test_books.py  test_home.py  test_root_controller.py
tests/books/: test_controller.py
