[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Livros"
version = "0.1.0"
description = "Servidor de Livros"
authors = [{ name = "Vinícius Godoy de Mendonça" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
exclude = ["tests*"]
